[tool.poetry]
name = "convertemppy"
version = "4.0.0"
description = "Easily convert between temperatures!"
authors = ["ttimbers <tiffany.timbers@stat.ubc.ca>"]
readme = "README.md"
homepage = "https://github.com/ttimbers/convertempPy"
repository = "https://github.com/ttimbers/convertempPy"
documentation = 'https://convertempPy.readthedocs.io'
keywords = ["temperature", "conversion"]
license = "MIT"
packages = [
    { include = "convertempPy"},
]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.3.5"
pytest-cov = "^3.0.0"
codecov = "^2.0.16"
python-semantic-release = "^4.6.0"
flake8 = "^3.7.9"
sphinx = "^2.4.3"
sphinxcontrib-napoleon = "^0.7"


[tool.semantic_release]
version_variable = "pyproject.toml:version" # version location
branch = "master"                             # branch to make releases of
changelog_file = "CHANGELOG.md"             # changelog file
build_command = "pip install poetry && poetry build"  # build dists
dist_path = "dist/"                         # where to put dists
upload_to_pypi = false                      # don't auto-upload to PyPI
remove_dist = false                         # don't remove dists

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
